--- a/beraerol.html
+++ b/beraerol.html
@@ -13,6 +13,7 @@
     <a>Sosyal Medya Hesaplarım: </a>
     <h1><a href="https://www.linkedin.com/in/bera-erol-233109294/?originalSubdomain=tr" target="_blank">Linkedin</a></h1>
     <h1><a href="https://medium.com/@beraeroll" target="_blank">Blog sayfam</a></h1>
+    <h1><a href="https://github.com/BeraTheBurz" target="_blank">GitHub profilim</a><h1>
     
     
        </div>
