--- a/beraerol.html
+++ b/beraerol.html
@@ -6,7 +6,7 @@
    <body>
    <canvas id="canvas1"></canvas>
     <img src="https://i.ibb.co/931PMVC/beraascii.png" alt="asciiart">  
-    <script src="script.js"></script>
+    //<script src="script.js"></script>
  
       
       <div class="navbar">
