--- a/beraerol.html
+++ b/beraerol.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="stil.css">
 </head>
    <body>
-   <canvas id="canvas1"></canvas>
+   //<canvas id="canvas1"></canvas>
     <img src="https://i.ibb.co/931PMVC/beraascii.png" alt="asciiart">  
     //<script src="script.js"></script>
  
