--- a/beraerol.html
+++ b/beraerol.html
@@ -20,7 +20,8 @@
 
    <body>
 
-       <h1><b>Sosyal Medya Hesaplarım</b></h1>
+       <h1 style="color: red;">Sosyal Medya Hesaplarım</h1>
+
 
     
     <img class="ascii" src="https://i.ibb.co/931PMVC/beraascii.png" alt="asciiart">  
