--- a/beraerol.html
+++ b/beraerol.html
@@ -16,9 +16,9 @@
   </style>
 </head>
 <body>
-  <h1><b>Sosyal Medya Hesaplarım</b></h1>
   <img class="ascii" src="https://i.ibb.co/931PMVC/beraascii.png" alt="asciiart">
   <div class="navbar">
+    <a>Sosyal Medya Hesaplarım</a>
     <p><a href="https://www.linkedin.com/in/bera-erol-233109294/?originalSubdomain=tr" target="_blank">Linkedin</a></p>
     <p><a href="https://medium.com/@beraeroll" target="_blank">Blog sayfam</a></p>
     <p><a href="https://github.com/BeraTheBurz" target="_blank">GitHub profilim</a></p>
