--- a/beraerol.html
+++ b/beraerol.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sosyal Medya ve Resimler</title>
+    <title>Sosyal Medya Hesaplarım</title>
     <style>
         body {
             font-family: Arial, sans-serif; 
