--- a/formobile.html
+++ b/formobile.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             background-size: cover;
             background-repeat: no-repeat;
-            background-color: white;
+            background-color: black;
             margin: 0;
             padding: 0;
         }
@@ -20,7 +20,7 @@
             padding: 20px;
         }
         .container {
-            max-width: 100%;
+            max-width: 50%;
             padding: 20px;
             background-image: url('https://i.pinimg.com/originals/c4/37/12/c43712af49b76ffbf268dd254800624d.gif');
             box-shadow: 0 0 10px rgba(0, 100, 0);
