--- a/formobile.html
+++ b/formobile.html
@@ -14,13 +14,13 @@
             padding: 0;
         }
         header {
-            background-color: white;
+            background-color: #0a5c0a;
             color: white;
             text-align: center;
             padding: 20px;
         }
         .container {
-            max-width: 50%;
+            max-width: 80%;
             padding: 20px;
             background-image: url('https://i.pinimg.com/originals/c4/37/12/c43712af49b76ffbf268dd254800624d.gif');
             box-shadow: 0 0 10px rgba(0, 100, 0);
