--- a/formobile.html
+++ b/formobile.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sosyal Medya ve Resimler</title>
+    <title>Bera Erol</title>     
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Arial, sans-serif; 
             background-size: cover;
             background-repeat: no-repeat;
             background-color: black;
@@ -15,29 +15,29 @@
         }
         header {
             background-color: #0a5c0a;
-            color: white;
+            color: black;
             text-align: center;
             padding: 20px;
         }
         .container {
-            max-width: 80%;
+            max-width: 800px;
+            margin: 0 auto;
             padding: 20px;
             background-image: url('https://i.pinimg.com/originals/c4/37/12/c43712af49b76ffbf268dd254800624d.gif');
-            box-shadow: 0 0 10px rgba(0, 100, 0);
+            box-shadow: 0 0 50px rgba(0,100,0);
         }
         .container a {
-            font-weight: bold;
-            display: inline-block;
+            font-weight: bold; 
+            display: block; /* Yazıları alt alta yapmak için */
             padding: 10px 20px;
-            background-color: #0a5c0a;
-            color: white;
+            background-color: #0a5c0a; 
+            color: black;
             margin: 0;
-            text-decoration: none;
         }
         .container img {
             width: 100%;
             display: block;
-            margin: 20px auto;
+            margin: 20px auto; /* Resmi dikey olarak ortala */
         }
         .social-media {
             margin-top: 20px;
@@ -47,26 +47,12 @@
             display: inline-block;
             margin-right: 10px;
             font-size: 24px;
-            color: white;
+            color: black;
             text-decoration: none;
         }
         .social-media a:last-child {
             margin-right: 0;
         }
-
-       
-            .container {
-                padding: 10px;
-            }
-            .container a {
-                padding: 5px 10px;
-            }
-            .social-media a {
-                font-size: 18px;
-            }
-        }
-        
-       }
     </style>
 </head>
 <body>
@@ -74,7 +60,7 @@
         <h1></h1>
     </header>
     <div class="container">
-        <img src="https://i.ibb.co/931PMVC/beraascii.png" alt="beratheburz">
+        <img src="https://i.ibb.co/931PMVC/beraascii.png" alt="beratheburz" width="100%">
         <div class="social-media">
             <a href="https://www.linkedin.com/in/bera-erol-233109294/?originalSubdomain=tr" target="_blank">Linkedin</a>
             <a href="https://medium.com/@beraeroll" target="_blank">Blog sayfam</a>
@@ -83,4 +69,3 @@
     </div>
 </body>
 </html>
-   
