--- a/formobile.html
+++ b/formobile.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bera Erol</title>     
-    <style>
+    <title>mobile için html</title>
+   <style>
         body {
             font-family: Arial, sans-serif; 
             background-size: cover;
@@ -20,7 +20,7 @@
             padding: 20px;
         }
         .container {
-            max-width: 800px;
+            max-width: 600px;
             margin: 0 auto;
             padding: 20px;
             background-image: url('https://i.pinimg.com/originals/c4/37/12/c43712af49b76ffbf268dd254800624d.gif');
@@ -28,16 +28,16 @@
         }
         .container a {
             font-weight: bold; 
-            display: block; /* Yazıları alt alta yapmak için */
+            display: inline-block;
             padding: 10px 20px;
             background-color: #0a5c0a; 
             color: black;
             margin: 0;
         }
         .container img {
-            width: 100%;
+            width: 30%;
             display: block;
-            margin: 20px auto; /* Resmi dikey olarak ortala */
+            margin: 20px auto; /* Center the image vertically */
         }
         .social-media {
             margin-top: 20px;
