--- a/formobile.html
+++ b/formobile.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mobile için html</title>
-   <style>
+    <title>Sosyal Medya ve Resimler</title>
+    <style>
         body {
-            font-family: Arial, sans-serif; 
+            font-family: Arial, sans-serif;
             background-size: cover;
             background-repeat: no-repeat;
             background-color: black;
@@ -14,41 +14,41 @@
             padding: 0;
         }
         header {
-            background-color: #0a5c0a;
-            color: black;
-            text-align: center;
-            padding: 20px;
+            
         }
         .container {
-            max-width: 600px;
+            max-width: 400px;
             margin: 0 auto;
             padding: 20px;
             background-image: url('https://i.pinimg.com/originals/c4/37/12/c43712af49b76ffbf268dd254800624d.gif');
             box-shadow: 0 0 50px rgba(0,100,0);
         }
         .container a {
-            font-weight: bold; 
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #0a5c0a; 
+            font-weight: bold;
+            display: block; 
+            padding: 10px;
+            background-color: #0a5c0a;
             color: black;
-            margin: 0;
+            margin: 3;
+            box-shadow: 0 0 30px rgba(0,100,0);
         }
         .container img {
-            width: 30%;
+            width: 60%;
             display: block;
-            margin: 20px auto; /* Center the image vertically */
-        }
-        .social-media {
-            margin-top: 20px;
-            text-align: center;
+            margin: 20px auto; /* Resmi ortalamak için */
         }
         .social-media a {
-            display: inline-block;
+            margin-top: 30px;
+            text-align: center
+        }
+        .social-media a {
+            display: block;
             margin-right: 10px;
             font-size: 24px;
-            color: black;
+            color: white;
             text-decoration: none;
+            text-align: center;
+            padding: 5px 10px;
         }
         .social-media a:last-child {
             margin-right: 0;
@@ -69,3 +69,4 @@
     </div>
 </body>
 </html>
+
