--- a/beraerol.html
+++ b/beraerol.html
@@ -25,7 +25,7 @@
             padding: 20px;
         }
         .container {
-            max-width: 800px;
+            max-width: 900px;
             margin: 0 auto;
             padding: 20px;
             background-image: url('https://i.pinimg.com/originals/c4/37/12/c43712af49b76ffbf268dd254800624d.gif');
@@ -52,7 +52,7 @@
             display: inline-block;
             margin-right: 10px;
             font-size: 24px;
-            color: black;
+            color: white;
             text-decoration: none;
         }
         .social-media a:last-child {
