--- a/beraerol.html
+++ b/beraerol.html
@@ -6,7 +6,7 @@
     <title>Bera Erol</title>
     <script>
         if (window.innerWidth <= 768) { 
-            window.location.href = "formobile.html"; 
+            window.location.href = "iletişim.html"; 
         }
     </script>
     <style>
