--- a/beraerol.html
+++ b/beraerol.html
@@ -8,6 +8,10 @@
         if (window.innerWidth <= 768) { 
             window.location.href = "iletisim.html"; 
         }
+         } else {
+          
+            window.location.href = "beraerol.html";
+        }
     </script>
     <style>
         body {
