--- a/beraerol.html
+++ b/beraerol.html
@@ -7,9 +7,7 @@
     <script>
         if (window.innerWidth <= 768) { 
             window.location.href = "iletisim.html"; 
-        }
-         } else {
-          
+        } else {
             window.location.href = "beraerol.html";
         }
     </script>
@@ -68,7 +66,7 @@
     <header>
         <h1></h1>
     </header>
-    <div class="container">
+    <div class "container">
         <img src="https://i.ibb.co/931PMVC/beraascii.png" alt="beratheburz" width="100%">
         <div class="social-media">
             <a href="https://www.linkedin.com/in/bera-erol-233109294/?originalSubdomain=tr" target="_blank">Linkedin</a>
