--- a/beraerol.html
+++ b/beraerol.html
@@ -7,30 +7,27 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background: url('https://i.pinimg.com/originals/c4/37/12/c43712af49b76ffbf268dd254800624d.gif') no-repeat center center fixed;
             background-size: cover;
-            background-repeat: no-repeat;
             background-color: black;
             margin: 0;
             padding: 0;
-        }
-        header {
-            
         }
         .container {
             max-width: 400px;
             margin: 0 auto;
             padding: 20px;
-            background-image: url('https://i.pinimg.com/originals/c4/37/12/c43712af49b76ffbf268dd254800624d.gif');
-            box-shadow: 0 0 50px rgba(0,100,0);
+            box-shadow: 0 0 50px rgba(0, 100, 0);
+            background-color: rgba(0, 0, 0, 0.5);
         }
         .container a {
             font-weight: bold;
-            display: block; 
+            display: block;
             padding: 10px;
             background-color: #0a5c0a;
             color: black;
-            margin: 3;
-            box-shadow: 0 0 30px rgba(0,100,0);
+            margin: 3px;
+            box-shadow: 0 0 30px rgba(0, 100, 0);
         }
         .container img {
             width: 60%;
@@ -39,15 +36,14 @@
         }
         .social-media a {
             margin-top: 30px;
-            text-align: center
+            text-align: center;
         }
         .social-media a {
-            display: block;
+            display: inline-block;
             margin-right: 10px;
             font-size: 24px;
             color: white;
             text-decoration: none;
-            text-align: center;
             padding: 5px 10px;
         }
         .social-media a:last-child {
@@ -56,10 +52,8 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1></h1>
-    </header>
     <div class="container">
+        <h1>Sosyal Medya ve Resimler</h1>
         <img src="https://i.ibb.co/931PMVC/beraascii.png" alt="beratheburz" width="100%">
         <div class="social-media">
             <a href="https://www.linkedin.com/in/bera-erol-233109294/?originalSubdomain=tr" target="_blank">Linkedin</a>
