--- a/beraerol.html
+++ b/beraerol.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sosyal Medya ve Resimler</title>
+    <title>Who am i?</title>
     <link rel="stylesheet" type="text/css" href="particles.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.css">
 </head>
