--- a/beraerol.html
+++ b/beraerol.html
@@ -10,7 +10,7 @@
 <body>
     <div id="particles-js" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 0;"></div>
     <div class="container" style="position: relative; z-index: 1;">
-        <img src="https://ibb.co/Q9XPQv7" alt="beratheburz" width="100%">
+        <a href="https://ibb.co/Q9XPQv7"><img src="https://i.ibb.co/zsNXxVW/berathematrixascii.png" alt="berathematrixascii" border="0"></a>
         <div class="social-media">
             <a href="https://www.linkedin.com/in/bera-erol-233109294/?originalSubdomain=tr" target="_blank">Linkedin</a>
             <a href="https://medium.com/@beraeroll" target="_blank">Blog sayfam</a>
