--- a/beraerol.html
+++ b/beraerol.html
@@ -10,7 +10,7 @@
 <body>
     <div id="particles-js" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 0;"></div>
     <div class="container" style="position: relative; z-index: 1;">
-         <img src="https://i.ibb.co/zsNXxVW/berathematrixascii.png" alt="beratheburz">
+         <img src="https://i.ibb.co/CBKgRqT/matrix.png" alt="beratheburz" width="100%">
         <div class="social-media">
             <a href="https://www.linkedin.com/in/bera-erol-233109294/?originalSubdomain=tr" target="_blank">Linkedin</a>
             <a href="https://medium.com/@beraeroll" target="_blank">Blog sayfam</a>
