--- a/beraerol.html
+++ b/beraerol.html
@@ -143,7 +143,7 @@
             display: block;
             margin-right: 0px;
             font-size: 24px;
-            color: white;
+            color: none;
             text-decoration: none;
             text-align: center;
             padding: 5px 10px;
