--- a/beraerol.html
+++ b/beraerol.html
@@ -14,6 +14,7 @@
         <div class="social-media">
             <a href="https://www.linkedin.com/in/bera-erol-233109294/?originalSubdomain=tr" target="_blank">Linkedin</a>
             <a href="https://medium.com/@beraeroll" target="_blank">Blog sayfam</a>
+            <a href="https://www.youtube.com/watch?v=__p7Ixg15MI" target="_blank">DarkPsychoNet youtube</a>
             <a href="https://github.com/BeraTheBurz" target="_blank">Github</a>
         </div>
     </div>
