--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          <img src="https://i.ibb.co/CBKgRqT/matrix.png" alt="beratheburz" width="100%">
         <div class="social-media">
             <a href="https://www.linkedin.com/in/bera-erol-233109294/?originalSubdomain=tr" target="_blank">Linkedin</a>
-            <a href="https:beraerol.com.tr/blog" target="_blank">Be Anonymous</a>
+            <a href="https:beraerol.com.tr/blog.html" target="_blank">Be Anonymous</a>
             <a href="https://www.youtube.com/watch?v=__p7Ixg15MI" target="_blank">DarkPsychoNet youtube</a>
             <a href="https://github.com/BeraTheBurz" target="_blank">Github</a>
         </div>
