--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
       Sonuç olarak Anonim olmamıza engel olan oluşumlara karşı çıkmak, bireysel özgürlüğün korunması, ifade özgürlüğünün sürdürülmesi ve demokrasinin güçlendirilmesi için hayati öneme sahiptir. Anonimlik, dijital dünyada ve geleneksel toplumda, bireylerin güvende hissetmelerini sağlar ve kişisel bilgilerinin kötüye kullanılmasını önler. Bu nedenle, her bireyin bu hakları savunma ve koruma sorumluluğu vardır.<br><br>
 
 
-       <b>Bera Erol (P-nutt)</b></p>
+       <b>Bera Erol</p>
 
 
 
