--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="social-media">
             <a href="https://www.linkedin.com/in/bera-erol-233109294/?originalSubdomain=tr" target="_blank">Linkedin</a>
             <a href="blog" target="_blank">Be Anonymous</a>
+             <a href="LearnHacking" target="_blank">Learn Hacking (Kitap) </a>
             <a href="https://www.youtube.com/watch?v=__p7Ixg15MI" target="_blank">DarkPsychoNet</a>
             <a href="https://github.com/BeraTheBurz" target="_blank">Github</a>
         </div>
