--- a/LearnHacking.html
+++ b/LearnHacking.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <title>Hacking For Beginners</title>
-    <a href="LearnHackingTr.html" target="_blank" style="color: green; background-color: white;">Türkçe versiyon için tıkla</a>
+    <a href="LearnHackingTr" target="_blank" style="color: green; background-color: white;">Türkçe versiyon için tıkla</a>
 
     <link rel="stylesheet" href="LearnHacking.css">
 </head>
