--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bera Erol</title>
-    <link rel="shortcut icon" type="image/png" href="https://ibb.co/vXk5Rbw"/>
+    <link rel="shortcut icon" type="image/png" href="https://ibb.co/KsdmQvG"/>
     <link rel="stylesheet" type="text/css" href="particles.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.css">
 </head>
