--- a/blog.html
+++ b/blog.html
@@ -52,6 +52,42 @@
 
       Sonuç olarak Anonim olmamıza engel olan oluşumlara karşı çıkmak, bireysel özgürlüğün korunması, ifade özgürlüğünün sürdürülmesi ve demokrasinin güçlendirilmesi için hayati öneme sahiptir. Anonimlik, dijital dünyada ve geleneksel toplumda, bireylerin güvende hissetmelerini sağlar ve kişisel bilgilerinin kötüye kullanılmasını önler. Bu nedenle, her bireyin bu hakları savunma ve koruma sorumluluğu vardır.<br><br>
 
+      import java.util.Random;
+import java.util.Scanner;
+
+public class BasitTahminOyunu {
+    public static void main(String[] args) {
+        Random random = new Random();
+        int rastgeleSayi = random.nextInt(10) + 1; // 1 ile 10 arasında rastgele sayı üretme
+
+        Scanner scanner = new Scanner(System.in);
+        int tahmin;
+        int deneme = 0;
+
+        System.out.println("1 ile 10 arasında bir sayıyı tahmin edin.");
+
+        while (true) {
+            deneme++;
+            System.out.print("Tahmininiz: ");
+            tahmin = scanner.nextInt();
+
+            if (tahmin == rastgeleSayi) {
+                System.out.println("Tebrikler! " + deneme + " denemede doğru tahmin ettiniz.");
+                break;
+            } else if (tahmin < 1 || tahmin > 10) {
+                System.out.println("Geçerli bir sayı giriniz (1-10 arasında).");
+            } else if (tahmin < rastgeleSayi) {
+                System.out.println("Daha büyük bir sayı girin.");
+            } else {
+                System.out.println("Daha küçük bir sayı girin.");
+            }
+        }
+
+        scanner.close();
+    }
+}
+
+
 
        <b>Bera Erol</p>
 
