--- a/blog.html
+++ b/blog.html
@@ -2,50 +2,59 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="blog.css">
 <head>
-<title>Benden bu kadar.</title>
+<title>anonim manifesto</title>
 
 </head>
 <body>
 
 <pre>
 
-    _,--._.-,
-   /\_r-,\_ )
-.-.) _;='_/ (.;
- \ \'     \/S )
-  L.'-. _.'|-'
- <_`-'\'_.'/
-   `'-._( \
-    ___   \\,      ___
-    \ .'-. \\   .-'_. /
-     '._' '.\\/.-'_.'
-        '--``\('--'
-              \\
-              `\\,
-                \|
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡀⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄.⠄⠄⠄.⠄.⠄⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠄⣀⣀⣤⣤⣴⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣦⣤⣤⣄⣀⡀⠄⠄⠄⠄⠄
+⠄⠄⠄⠄⣴⣿⣿⡿⣿⢿⣟⣿⣻⣟⡿⣟⣿⣟⡿⣟⣿⣻⣟⣿⣻⢿⣻⡿⣿⢿⣷⣆⠄⠄⠄
+⠄⠄⠄⢘⣿⢯⣷⡿⡿⡿⢿⢿⣷⣯⡿⣽⣞⣷⣻⢯⣷⣻⣾⡿⡿⢿⢿⢿⢯⣟⣞⡮⡀⠄⠄
+⠄⠄⠄⢸⢞⠟⠃⣉⢉⠉⠉⠓⠫⢿⣿⣷⢷⣻⣞⣿⣾⡟⠽⠚⠊⠉⠉⠉⠙⠻⣞⢵⠂⠄⠄
+⠄⠄⠄⢜⢯⣺⢿⣻⣿⣿⣷⣔⡄⠄⠈⠛⣿⣿⡾⠋⠁⠄⠄⣄⣶⣾⣿⡿⣿⡳⡌⡗⡅⠄⠄
+⠄⠄⠄⢽⢱⢳⢹⡪⡞⠮⠯⢯⡻⡬⡐⢨⢿⣿⣿⢀⠐⡥⣻⡻⠯⡳⢳⢹⢜⢜⢜⢎⠆⠄⠄
+⠄⠄⠠⣻⢌⠘⠌⡂⠈⠁⠉⠁⠘⠑⢧⣕⣿⣿⣿⢤⡪⠚⠂⠈⠁⠁⠁⠂⡑⠡⡈⢮⠅⠄⠄
+⠄⠄⠠⣳⣿⣿⣽⣭⣶⣶⣶⣶⣶⣺⣟⣾⣻⣿⣯⢯⢿⣳⣶⣶⣶⣖⣶⣮⣭⣷⣽⣗⠍⠄⠄
+⠄⠄⢀⢻⡿⡿⣟⣿⣻⣽⣟⣿⢯⣟⣞⡷⣿⣿⣯⢿⢽⢯⣿⣻⣟⣿⣻⣟⣿⣻⢿⣿⢀⠄⠄
+⠄⠄⠄⡑⡏⠯⡯⡳⡯⣗⢯⢟⡽⣗⣯⣟⣿⣿⣾⣫⢿⣽⠾⡽⣺⢳⡫⡞⡗⡝⢕⠕⠄⠄⠄
+⠄⠄⠄⢂⡎⠅⡃⢇⠇⠇⣃⣧⡺⡻⡳⡫⣿⡿⣟⠞⠽⠯⢧⣅⣃⠣⠱⡑⡑⠨⢐⢌⠂⠄⠄
+⠄⠄⠄⠐⠼⣦⢀⠄⣶⣿⢿⣿⣧⣄⡌⠂⠢⠩⠂⠑⣁⣅⣾⢿⣟⣷⠦⠄⠄⡤⡇⡪⠄⠄⠄
+⠄⠄⠄⠄⠨⢻⣧⡅⡈⠛⠿⠿⠿⠛⠁⠄⢀⡀⠄⠄⠘⠻⠿⠿⠯⠓⠁⢠⣱⡿⢑⠄⠄⠄⠄
+⠄⠄⠄⠄⠈⢌⢿⣷⡐⠤⣀⣀⣂⣀⢀⢀⡓⠝⡂⡀⢀⢀⢀⣀⣀⠤⢊⣼⡟⡡⡁⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠈⢢⠚⣿⣄⠈⠉⠛⠛⠟⠿⠿⠟⠿⠻⠻⠛⠛⠉⠄⣠⠾⢑⠰⠈⠄⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠄⠄⠑⢌⠿⣦⡡⣱⣸⣸⣆⠄⠄⠄⣰⣕⢔⢔⠡⣼⠞⡡⠁⠁⠄⠄⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠙⢮⣿⣽⣯⠄⠄⢨⣿⣿⡷⡫⠃⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠘⠙⠝⠂⠄⢘⠋⠃⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄
 
 
 </pre>
 
    <p class="heading">
 
-       <a>Ölüm Kişiseldir</a>
+       <a>Anonim olmak hakkımız!</a>
 
-       <br> <br> Öncelikle sözlerime ardımda bıraktığım ve bunların hiçbirini hak etmeyen çok sevdiğim aileme özür dilemekle başlıyorum. size bunu yaşatmayı istemezdim. <br>
+       <br> <br> Günümüz dünyasında, gizlilik ve anonimlik giderek daha fazla tehlikeye atılmaktadır. İnternetin yaygınlaşması, dijital izleme teknolojilerinin gelişimi ve özel bilgilere erişim, bireylerin anonim olma haklarını tehdit etmektedir. Ancak, anonimlik sadece kişisel mahremiyetin korunmasıyla ilgili değildir. Aynı zamanda ifade özgürlüğünün ve demokrasinin korunmasına da hizmet eder. <br>
 
 <br>
 <br>
-      Bazı şeyler yavaş yavaş belli oluyor. Ben bu gerçikliği kabullendim ve ileride onun başkasıyla mutlu olup başkasının elini tutmasına şahitlik etmek istemiyorum.
+      Demokratik toplumlarda anonimlik, ifade özgürlüğünün ve politik katılımın temelini oluşturur. İnsanlar, düşüncelerini ve eleştirilerini özgürce ifade edebilmeli ve politik düşünceyi açıkça tartışabilmelidir. Ancak, kişilerin ifadeleri veya düşünceleri nedeniyle cezalandırılma veya zulme uğrama riski varsa, bu demokratik sürecin önemli ölçüde zedelenmesine yol açar.
 
-      Ayrıca hayattan zevk almamaya başladım falan filan işte intihar notu. Sevdiklerime yaşatacağım bu travma için özür dilerim. Normalde birilerini götürmeden gitmezdim derdim kendime. Öyle olmuyormuş :)<br>
+      Anonimlik, bireysel özgürlüğün bir parçasıdır. Kişisel bilgilerin ve özel yaşamın gizliliği, her bireyin temel bir hakkıdır. Ancak, özellikle dijital dünyada, çevrimiçi izleme ve veri toplama uygulamaları, bu hakları ciddi şekilde tehdit etmektedir. Anonim olma hakkı, bu tür tehditlere karşı bir koruma sağlar. Anonimliği tehdit eden unsurlar arasında devlet denetimi, özel şirketlerin veri toplama pratiği, siber saldırılar ve siber zorbalık bulunmaktadır. Bu unsurlar, bireylerin kişisel bilgilerini ve anonimliklerini tehlikeye atar.<br>
 
       <br><br>
-      Ayrıca sevgilim; okulunu aksatmadan bitir, umarım Allah kaderine güzel bir hayat yazmıştır. <br><br>
-      <br> Vasiyetim Zile'ye gömülmek. Bir de mezar taşıma şu müziğin qr kodunu yaptırırsanız ne mutlu bana. (Gitmeden de yaptım yine saykoluğumu da napıyım var böyle değişik huylarım) "https://www.youtube.com/watch?v=TRJ_s2G76Hg"<br>
+      Anonimliğin korunması için bireylerin, sivil toplum kuruluşlarının ve hükümetlerin birlikte çalışması gerekmektedir. Bireyler, dijital mahremiyetlerini koruma konusunda bilinçlenmelidir. Sivil toplum kuruluşları, anonimliği savunmalı ve bu hakları tehdit eden uygulamalara karşı mücadele etmelidir. Hükümetler ise gizlilik yasalarını güçlendirmeli ve bireylerin kişisel bilgilerini koruma konusunda etkili önlemler almalıdır.
 
-      
+      Sonuç olarak Anonim olmamıza engel olan oluşumlara karşı çıkmak, bireysel özgürlüğün korunması, ifade özgürlüğünün sürdürülmesi ve demokrasinin güçlendirilmesi için hayati öneme sahiptir. Anonimlik, dijital dünyada ve geleneksel toplumda, bireylerin güvende hissetmelerini sağlar ve kişisel bilgilerinin kötüye kullanılmasını önler. Bu nedenle, her bireyin bu hakları savunma ve koruma sorumluluğu vardır.<br><br>
 
-   
+
+
+       <b>Bera Erol</p>
 
 
 
