--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <div class="social-media">
             <a href="blog" target="_blank">Bloglarım</a>
             <a href="https://www.linkedin.com/in/bera-erol-233109294/?originalSubdomain=tr" target="_blank">Linkedin</a>
-             <a href="LearnHacking" target="_blank">Learn Hacking (Kitap) </a>
             <a href="https://www.youtube.com/watch?v=__p7Ixg15MI" target="_blank">DarkPsychoNet</a>
+            <a href="yapaygerizeka" target="_blank">Yapay Geri Zeka (Kitap) </a>
             <a href="https://github.com/BeraTheBurz" target="_blank">Github</a>
+            <a href="LearnHacking" target="_blank">Learn Hacking (Kitap) </a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
