--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="blog" target="_blank">Bloglarım</a>
             <a href="https://www.linkedin.com/in/bera-erol-233109294/?originalSubdomain=tr" target="_blank">Linkedin</a>
             <a href="https://www.youtube.com/watch?v=__p7Ixg15MI" target="_blank">DarkPsychoNet</a>
-            <a href="yapaygerizeka" target="_blank">Yapay Geri Zeka (Kitap) </a>
+            <a href="yapaygerizeka" target="_blank">Yapay Geri Zeka </a>
             <a href="https://github.com/BeraTheBurz" target="_blank">Github</a>
             <a href="LearnHacking" target="_blank">Learn Hacking (Kitap) </a>
         </div>
