--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <audio controls>
         <source src="https://jmp.sh/s/ozmoBVzCufYB0LAaxMKA" type="audio/mp3">
             </audio>
+            <script> 
+            var audio = document.getElementById("myAudio");
+            document.addEventListener("DOMContentLoaded", function () {
+                     audio.play();
+                    });
+                    </script>
     <div id="particles-js" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 0;"></div>
     <div class="container" style="position: relative; z-index: 1;">
          <img src="https://i.ibb.co/CBKgRqT/matrix.png" alt="beratheburz" width="100%">
