--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="container" style="position: relative; z-index: 1;">
          <img src="https://i.ibb.co/CBKgRqT/matrix.png" alt="beratheburz" width="100%">
         <div class="social-media">
+            <a href="berkay.html" target="_blank"> Berkay Davulcu Proje</a>
             <a href="blog" target="_blank">Bloglarım</a>
             <a href="https://www.linkedin.com/in/bera-erol-233109294/?originalSubdomain=tr" target="_blank">Linkedin</a>
             <a href="https://www.youtube.com/watch?v=__p7Ixg15MI" target="_blank">DarkPsychoNet</a>
